--- a/config/database.yml
+++ b/config/database.yml
@@ -13,12 +13,12 @@ development:
 
 test:
   <<: *default
-  database: store_user_test
+  database: store_book_test
   username: store_user
   password: store_user
 
 production:
   <<: *default
-  database: store_user_production
+  database: store_book_production
   username: store_user
   password: store_user
